# Tesis_Project

./: .gitignore  README.md
Documentos/: Arquitectura_Sistema_IoT_SmartMeter.docx  Mapa_Brechas_Objetivos_vs_Codigo.md  Seguridad_y_Aprovisionamiento.md
energia-iot-backend/: .env.example  README.md  migrate_imei_reconciliacion.py  migrate_nodo_salud.py  requirements.txt  test_db_connection.py  test_mqtt_publish.py
energia-iot-backend/app/: __init__.py  config.py  database.py  main.py
energia-iot-backend/app/models/: __init__.py  audit_log.py  dispositivo.py  evento.py  medicion.py  nodo_salud.py  usuario.py
energia-iot-backend/app/routers/: __init__.py  admin.py  auditoria.py  auth.py  comandos.py  dashboard.py  dispositivos.py  eventos.py  mediciones.py  salud.py
energia-iot-backend/app/schemas/: __init__.py  dispositivo.py  medicion.py
energia-iot-backend/app/services/: __init__.py  audit.py  auth.py  conexion.py  mqtt_client.py
energia-iot-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js
energia-iot-frontend/src/: App.jsx  index.css
firmware_SmartMeter/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32s3_devkitc_1
firmware_SmartMeter/config/: board_config.h  meter_config.h  mqtt_ca_cert.h  rtos_app_config.h
firmware_SmartMeter/data/: data_buffer.c  data_buffer.h  meter_data.c  meter_data.h
firmware_SmartMeter/docs/: ADE_RECOVERY_VALIDATION.md  ARCHITECTURE.md  CALIBRATION_GUIDE.md  RESUMEN_ESTADO_ACTUAL.md  SPRINT2_TEST_PROTOCOL.md  SPRINT3_TEST_PROTOCOL.md  SPRINT4_UI_WIRING.md  SPRINT_ROADMAP.md
firmware_SmartMeter/main/: CMakeLists.txt  main.c
firmware_SmartMeter/tasks/: task_calibration.c  task_calibration.h  task_communication.c  task_communication.h  task_manager.c  task_manager.h  task_measurement.c  task_measurement.h  task_power_mgmt.c  task_power_mgmt.h  task_power_quality.c  task_power_quality.h  task_ui.c  task_ui.h
firmware_SmartMeter/utils/: logger.c  logger.h  math_utils.c  math_utils.h  nvm.c  nvm.h
mosquitto-config/: DEPLOY.md  TLS_DEPLOY.md  acl  mosquitto.conf
mosquitto-config/certs/: .gitignore  generar_certificados.sh
(+97 files in other folders)
